Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73524

Segfault when switching popups in qopenglwidget example

XMLWordPrintable

    • Linux/Wayland
    • 4b58ff21f4a3c629867064289b6c778bbb57f95a (qt/qtwayland/5.12)

      To reproduce:

      1. Run qopenglwidget
      2. Click the file menu
      3. Mouse over to the next menu item

      Crashes

        For Gerrit Dashboard: QTBUG-73524
        # Subject Branch Project Status CR V

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes