src/plugins/shellintegration/xdg-shell/qwaylandxdgshell.cpp
@@ -369,7 +369,14 @@ void QWaylandXdgSurface::setGrabPopup(QWaylandWindow *parent, QWaylandInputDevic
     auto *top = m_shell->m_topmostGrabbingPopup;
 
     if (top && top->m_xdgSurface != parentXdgSurface) {
-        qCWarning(lcQpaWayland) << "setGrabPopup called for a surface that was not the topmost popup, positions might be off.";
+        qCWarning(lcQpaWayland) << "setGrabPopup called with a parent," << parentXdgSurface
+                                << "which does not match the current topmost grabbing popup,"
+                                << top->m_xdgSurface << "According to the xdg-shell protocol, this"
+                                << "is not allowed. The wayland QPA plugin is currently handling"
+                                << "it by setting the parent to the topmost grabbing popup."
+                                << "Note, however, that this may cause positioning errors and"
+                                << "popups closing unxpectedly because xdg-shell mandate that child"
+                                << "popups close before parents";
         parent = top->m_xdgSurface->m_window;
     }
     setPopup(parent);
